--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TradingView Link Manager</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect fill='%238B4513' width='16' height='16'/><rect fill='%23A0522D' x='0' y='0' width='5' height='5'/><rect fill='%23A0522D' x='10' y='0' width='6' height='5'/><rect fill='%23A0522D' x='0' y='10' width='5' height='6'/><rect fill='%23A0522D' x='10' y='10' width='6' height='6'/><rect fill='%23654321' x='5' y='0' width='5' height='5'/><rect fill='%23654321' x='0' y='5' width='5' height='5'/><rect fill='%23654321' x='10' y='5' width='6' height='5'/><rect fill='%23654321' x='5' y='10' width='5' height='6'/><rect fill='%23D2691E' x='5' y='5' width='5' height='5'/><rect fill='%23CD853F' x='2' y='2' width='2' height='2'/><rect fill='%23CD853F' x='12' y='2' width='2' height='2'/></svg>">
     <style>
         * {
             margin: 0;
